artists/artistsindividual.css
/*UNIVERSAL*/

*{
  margin: 0;
  font-family: "Inter", sans-serif;
  font-optical-sizing: auto;
  font-weight:300;
  max-width: 100vw;
  
}

html,body {margin: 0; width: 100%; background-color:#12171d;/*oldcolorwas12161c*/}
html {height: 100%;}

body {
  min-height: 100%; /*FIX FOUND - this fixed the repeat img only showing for part of the page, as the body was only reaching the viewport's pixel height when body was set to height: 100%; solution was to keep html as that setting, but set body to min-height 100% instead of definitive height to 100%*/
  display: flex;
  flex-direction: column;
  overflow-x: hidden; /*prevent horizontal scroll bar*/
  /*star background*/
  background-image: url("/images/starV1frame1.png");
  background-repeat: repeat;
  background-attachment:fixed;
  /*TODO - play with these settings and consider animating the background img using method from STARTEST
  need to experiment with this more later (scrolling, animation with startest methods, full page coverage-FIX FOUND- min-height:100%; on body instead of height:100%;)*/
}

@media screen and (max-width: 850px){
  body {
    /*font-size: 12pt;*/
    /*font-size: calc(3vw+1em);*/
    background-size: 50%; /*fixes star density being too low on mobile*/
  }
}
@media screen and (min-width: 0px){
  :root {font-size: 12pt;  }
}
@media screen and (min-width: 365px){
  :root {font-size: 13pt;  }
}
@media screen and (min-width: 422px){
  :root {font-size: 14pt;  }
}
@media screen and (min-width: 506px){
  :root {font-size: 15pt;  }
}
@media screen and (min-width: 600px){
  :root {font-size: 16pt;  }
}
@media screen and (min-width: 700px){
  :root {font-size: 18pt;  }
}
@media screen and (min-width: 850px){
  :root {font-size: 20pt;  }
}
@media screen and (min-width: 1058px){
  :root {font-size: 22pt;  }
}
@media screen and (min-width: 1391px){
  :root {font-size: 24pt;  }
}
@media screen and (min-width: 1520px){
  :root {font-size: 26pt;  }
}
@media screen and (min-width: 2000px){
  :root {font-size: 30pt;  }
}
@media screen and (min-width: 3000px){
  :root {font-size: 36pt;  }
}
@media screen and (min-width: 3800px){
  :root {font-size: 40pt;  }
}

a {list-style-type: none; 
  text-decoration: none;
  z-index: 1; }

a:link, a:active, a:link *, a:active *{
  color: #e3f5ff;
}
a:visited, a:visited *{
  color: #e3f5ff;
}
a:hover, a:hover *{
  color: #e3f5ff3f;
}

/*nav*/
/*nav-desktop*/
nav {
  z-index: 29;
  align-self: end;
  margin-right: 5%;
  position: fixed;
  
}
  nav button{
    display: none;
    visibility: hidden;
    position: fixed;
    height: 0px;
    width: 0px;
    margin: 0;
    padding: 0;
    border: 0;
    z-index: 30;
  }
    #topnav {
      
      z-index: 10;
      display: flex;
      align-items: center;
      margin: 0;
      gap: 1rem;      
      list-style-type: none;
      background-color: #12171d9d;
      padding: .5rem;
      border-radius: .5rem;
    }  
    .topnav-item{list-style-type: none;}
    .topnav-link{
      z-index: 12; 
      font-weight: 500;
      text-decoration: none;
    }

    @media screen and (min-width: 850px){#topnav-link-home{visibility: hidden; display: none;}}
         
/*nav-mobile*/
 
  @media screen and (max-width: 850px) and (prefers-reduced-motion){
    #topnav-menu{
      translate: 0 0;
      opacity: 0;
      transition: opacity 500ms ease-in-out; 
      transition: translate 0s;

    }
  }
@media screen and (max-width: 850px){
    
  nav{z-index: 30; width: 40px; height: 40px; margin:0; padding: 0; top: 3px; right: 3px;}

  .hamburger-icon {z-index: 32; width: 100%; height: 100%; display: flex; flex-direction: column; justify-content: space-evenly; align-items: center;}
      .hamburger-icon-piece {
        z-index: 32;
        width: 25px;
        height: 5%;
        border: 1px solid white;
        background-color: #e3f5ff;
        border-radius: 1rem;
      }
  nav button{
    z-index: 33;
    display: block;
    visibility: visible;
    position: fixed;
    background: none;
    height: 40px;
    width: 40px;
    margin: 0;
    padding: 0;
    border: 0;
    top: 0;
    right: 0;
  }
  #topnav-menu{
    width: 10rem; height: 14rem; margin: 0; position: fixed; top: 3px; right: 3px; /*fix: added measurements here instead of on nav element - this way the nav doesn't stay while only its content is translated*/
    z-index: 31;
    translate: 300vw 0;
    transition: translate 0.3s ease-in-out; 
  }
    #topnav {
      border: 2px inset white;
      margin-top: 2.5rem;
      z-index: 36;
      width: 100%;
      height: 100%;
      background-color: #12171df3;
      flex-direction: column;
      justify-content: space-evenly;
      font-size: large;
      align-items:flex-start; 
    }
          .topnav-link{width: 100%; display: inline-block;}
          .topnav-item{width: 100%; display: inline-block;}
  }

 
#topnav-open[aria-expanded="true"] ~ #topnav-menu {
  translate: 0; 
}

@media (prefers-reduced-motion){
  #topnav-open[aria-expanded="true"] ~ #topnav-menu {
    opacity: 1;
  }
}


/*header*/
                            
header {
  display: flex;
  width: 100%;
  height: 2.5rem;
  align-items: center;
  justify-content: start;
  z-index: 29;
  border-bottom: 1px inset #e3f5ff;
  position: fixed;
  }
  #header-link{
      width: 70%; 
      height: 2.25rem;   
      display: flex;
      flex-direction: row;
      align-items: center;
      text-decoration: none;
      justify-content: start;

  }
      #header-h1 {align-items: center; font-size: 1rem;  font-weight: 500; color:#e3f5ff; padding-left: 20px;} 
      #tree-img {height: 2.25rem; width:2.34rem;} 


/*LOADSCREEN*/
      #loadcontainer{
        width: 100%;
        overflow-y: hidden;
        position: absolute;
        top: 0;
    }
        /*MOBILE*/
        @media screen and (max-width: 850px){
        #loadcontainer {height: calc(2.5rem + 1000px + 4rem);} /*header plus main plus footer - 2rem high internals + 2rem high socials*/
        }                                
/* ... */

